--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "@radix-ui/react-switch": "^1.2.4",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.510.0",
+        "tailwind-merge": "^3.3.0",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
